[package]
name = "chorograph-dotnet-plugin-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chorograph-plugin-sdk-rust = { git = "https://github.com/adevcorn/chorograph-plugin-sdk-rust.git", tag = "v0.1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
